<resources>
    <string name="app_name">助农小管家</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="person_information">个人资料</string>
    <string name="boookmark">书签</string>
    <string name="myself_sort">列表</string>
    <string name="settings">设置和隐私</string>
    <string name="helps">帮助中心</string>
    <string name="regUser">注册账户</string>
    <string name="userName">用户名</string>
    <string name="phoneNum">手机号</string>
    <string name="passwd">密码</string>
    <string name="rePasswd">确认密码</string>
    <string name="reg">注册</string>
    <string name="otherFun">其他方式登录</string>
    <string name="welcome">欢迎</string>
    <string name="loginTips">请用你的信息登录</string>
    <string name="login">登录</string>
    <string name="jPw">记住密码</string>
    <string name="title_home">home</string>
    <string name="title_dashboard">dashboard</string>
    <string name="title_notifications">notifications</string>
    <string name="farm_helper">\@Farmerhelper · 37秒</string>
    <string name="hot_topic">\@Hot_topic · 3分钟</string>
    <string name="professor">\@perfessor · 5分钟</string>
    <string name="search">搜索</string>
    <string name="sort">分类</string>
    <string name="chong">注意！病虫害预警！</string>
    <string name="date1">1 2 月 7 日</string>
    <string name="NO">things</string>
</resources>