<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/person_information"
        android:label="@string/person_information"
        tools:layout="@layout/person_information" />

    <fragment
        android:id="@+id/bookmark"
        android:label="@string/boookmark"
        tools:layout="@layout/bookmark" />

    <fragment
        android:id="@+id/myself_sort"
        android:label="@string/myself_sort"
        tools:layout="@layout/myself_sort" />

    <fragment
        android:id="@+id/settings"
        android:label="@string/settings"
        tools:layout="@layout/settings" />

    <fragment
        android:id="@+id/helps"
        android:label="@string/helps"
        tools:layout="@layout/helps" />
</navigation>