<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/person_information"
            android:icon="@drawable/outline_person_24"
            android:title="@string/person_information" />
        <item
            android:id="@+id/bookmark"
            android:icon="@drawable/outline_bookmark_border_24"
            android:title="@string/boookmark" />
        <item
            android:id="@+id/myself_"
            android:icon="@drawable/outline_article_24"
            android:title="@string/myself_sort" />
        <item
            android:id="@+id/settings"
            android:icon="@drawable/outline_settings_24"
            android:title="@string/settings" />
        <item
            android:id="@+id/helps"
            android:icon="@drawable/outline_help_outline_24"
            android:title="@string/helps" />
    </group>
</menu>