<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/register_background"
    android:alpha="0.98"
    tools:context=".MainActivity">

    <View
        android:layout_width="wrap_content"
        android:layout_height="10dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/signupTitle"
        android:text="@string/regUser"
        android:textSize="35sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:alpha="0.9"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:layout_margin="20dp"/>

    <View
        android:layout_width="wrap_content"
        android:layout_height="10dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/username"
        android:layout_below="@id/signupTitle"
        android:background="#30ffffff"
        android:hint="@string/userName"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:layout_margin="10dp"
        android:padding="20dp"
        android:textSize="23sp"
        android:drawableStart="@drawable/ic_baseline_person_outline_24"
        android:drawablePadding="20dp"/>

    <View
        android:layout_width="wrap_content"
        android:layout_height="10dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/phone"
        android:layout_below="@id/username"
        android:background="#30ffffff"
        android:hint="@string/phoneNum"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:layout_margin="10dp"
        android:padding="20dp"
        android:textSize="23sp"
        android:drawableStart="@drawable/ic_baseline_phone_24"
        android:drawablePadding="20dp"/>

    <View
        android:layout_width="wrap_content"
        android:layout_height="10dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/password"
        android:layout_below="@id/phone"
        android:background="#30ffffff"
        android:hint="@string/passwd"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:layout_margin="10dp"
        android:padding="20dp"
        android:textSize="23sp"
        android:drawableStart="@drawable/ic_baseline_info_24"
        android:drawablePadding="20dp"
        android:inputType="textPassword"/>

    <View
        android:layout_width="wrap_content"
        android:layout_height="10dp"/>

    <EditText
        android:id="@+id/repassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="#30ffffff"
        android:drawableStart="@drawable/ic_baseline_info_24"
        android:drawablePadding="20dp"
        android:hint="@string/rePasswd"
        android:inputType="textPassword"
        android:padding="20dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="23sp" />

    <View
        android:layout_width="wrap_content"
        android:layout_height="10dp"/>

    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/signupbtn"
        android:text="@string/reg"
        android:textSize="40sp"
        android:layout_below="@id/repassword"
        android:layout_centerHorizontal="true"
        android:backgroundTint="@color/design_default_color_secondary"
        android:layout_margin="28dp"
        app:cornerRadius="28dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/info"
        android:layout_above="@id/socialicons"
        android:textColor="@color/black"
        android:alpha="0.4"
        android:text="@string/otherFun"
        android:textSize="15sp"
        android:textStyle="bold"
        android:fontFamily="sans-serif-medium"
        android:layout_centerHorizontal="true"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/socialicons"
        android:gravity="center"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">


    </LinearLayout>



</RelativeLayout>